# HaskellOpenGLPractice

./: README.md  Study.lkshw
Practice/: Practice.cabal
Practice/src/: Main.hs
