name: Practice
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved
synopsis: Practice
description:
    Practice

executable Practice
    main-is: Main.hs
    build-depends:
        GLFW-b -any,
        OpenGL -any,
        QuickCheck -any,
        base -any,
        doctest -any
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -ferror-spans

test-suite test-Practice
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        GLFW-b -any,
        OpenGL -any,
        QuickCheck -any,
        base -any,
        doctest -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -ferror-spans
